Fixed nav on mobile and logo placement on desktop

--- a/css/main.css
+++ b/css/main.css
@@ -27,26 +27,52 @@ body {
     padding: 15px 0;
 }
 
+.navbar-pixelite .navbar-brand img {
+    margin:30px 0 0 30px;
+    display: block;
+    max-width:180px;
+    max-height:60px;
+    width: auto;
+    height: auto;
+}
+
 footer {
     padding: 30px 0;
 }
 
-@media(min-width:768px) {
-    .navbar-pixelite .navbar-brand {
-        padding: 17px 0;
-    }
+.navbar-pixelite ul.navbar-right li a {
+    color: #ffffff;
 }
+
+.navbar-pixelite ul.navbar-right li a:hover {
+    background-color: #000000;
+}
+
 @media (max-width: 767px) {
     body {
         padding-top: 50px;  /*Required padding for .navbar-fixed-top. Change if height of navigation changes.*/
     }
 
-    .navbar-pixelite.navbar-brand {
-        padding: 5px;
+    .navbar-pixelite .icon-bar {
+       background-color: #DDDDDD;
+    }
+
+    .navbar-pixelite .navbar-brand {
+        padding: 0;
     }
 
     .navbar-pixelite .navbar-brand img {
-        height: 100%;
+        margin: 15px 10px;
+        max-width:90px;
+        max-height:30px;
+    }
+
+    .navbar-pixelite ul.navbar-right li a {
+        color: #ffffff;
+    }
+
+    .navbar-pixelite ul.navbar-right li a:hover {
+        background-color: #000000;
     }
 }
 
@@ -129,7 +155,6 @@ a.tag {
     color: #fff;
     background-color: dodgerblue;
 }
-
 
 a.tag:hover {
     color: #fff;
